--- a/callitconditional.html
+++ b/callitconditional.html
@@ -29,18 +29,21 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="portratis.html">Portratis</a></li>
+							<li><a href="lifestyle.html">Lifestyle</a></li>
+							<li><a href="calluscrazy.html">Call Us Crazy</a></li>
+							<li><a href="callitfashion.html">Call It Fashion</a></li>
+						    <li><a href="callitconditional.html">Call It Conditional</a></li>
+							<li><a href="callushuman.html">Call Us Human</a></li>
 						</ul>
 					</nav>
 
+
 				<!-- Main -->
 					<div id="main">
-						<div class="inner">
+						<div class="inner"style="text-align:center;">
 							<h1>Call It Conditional</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="images/pic13.jpg" alt="" /></span><div style="padding-left:100px; padding-right:100px; line-height: .95;">
 					The series entitled "Conditional" is referencing today's hook-up culture, The lust, the love, the
 emotionless, the title "Conditional" is referencing how "love" in unconditional but because of the
 way we interpret love in today's society it's become more of a "Conditional" factor as people are
@@ -50,7 +53,7 @@ nurturer way of viewing love and then in the middle you generally see the color 
 references the Lust factor in a relationship, each image is depicting a different outcome and
 stereotype in this hook-up culture. It's more of a personal view on how we experience love, what
 is it? Do we even know how to love, feminism says no! Because we are not taught how to love,
-we are taught how to A) nurture(women) and B) support(men).
+we are taught how to A) nurture(women) and B) support(men).</div>
 						</div>
 					</div>
 
