--- a/callushuman.html
+++ b/callushuman.html
@@ -42,12 +42,15 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="portratis.html">Portratis</a></li>
+							<li><a href="lifestyle.html">Lifestyle</a></li>
+							<li><a href="calluscrazy.html">Call Us Crazy</a></li>
+							<li><a href="callitfashion.html">Call It Fashion</a></li>
+						    <li><a href="callitconditional.html">Call It Conditional</a></li>
+							<li><a href="callushuman.html">Call Us Human</a></li>
 						</ul>
 					</nav>
+
 
 				<!-- Main -->
 					<div id="main">
